# rom_ar_app

./: .gitignore  how_to_run.md  todo.md
.github/workflows/: android-build.yml
android_app/: gradle.properties  gradlew  settings.gradle.kts
android_app/app/: build.gradle.kts  proguard-rules.pro
android_app/app/src/main/: AndroidManifest.xml
android_app/app/src/main/assets/web_app/: index.html
android_app/app/src/main/assets/web_app/js/: app.js  gesture_recognizer.js  ros_bridge.js
android_app/app/src/main/java/com/arrobot/controller/: ConnectionActivity.kt  MainActivity.kt  WebAppInterface.kt
android_app/app/src/main/res/drawable/: ic_launcher_foreground.xml
android_app/app/src/main/res/layout/: activity_connection.xml  activity_main.xml
android_app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
ros2_ws/src/ar_robot_controller/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/ar_robot_controller/config/: params.yaml
ros2_ws/src/ar_robot_controller/launch/: ar_controller.launch.py  web_server.launch.py
ros2_ws/src/ar_robot_controller/scripts/: gesture_controller_node.py  lidar_relay_node.py
ros2_ws/src/ar_robot_controller/web_app/: index.html
ros2_ws/src/ar_robot_controller/web_app/js/: app.js  lidar_visualizer.js  virtual_joystick.js
